Leadership alignment issue fixed

--- a/src/app/Modules/Main-Church/home/home.component.scss
+++ b/src/app/Modules/Main-Church/home/home.component.scss
@@ -209,6 +209,7 @@ $page_width : 1300px;
             max-width: 600px;
             height: 37px;
             margin-top: 10px;
+            flex-wrap: wrap;
             h3{
                 font-family: 'REM', sans-serif;
                 font-size: 32px;
