--- a/src/app/Modules/Main-Church/leadership/leadership.component.scss
+++ b/src/app/Modules/Main-Church/leadership/leadership.component.scss
@@ -104,11 +104,11 @@ $page_width : 1300px;
             align-content: flex-start;
             width: 100%;
             max-width: 400px;
-            padding: 0px 20px;
+            // padding: 0px 20px;
+            min-height: 297px;
             .profileImage{
                 max-width: 400px;
                 margin: auto;
-                min-height: 259px;
                 border-style: solid;
                 border-width: 16px;
                 background: URL(/assets/images/modules/main-church/leadership/founder.jpg);
@@ -118,8 +118,12 @@ $page_width : 1300px;
                 background-repeat: no-repeat;
                 background-color: #007BFF;
                 background-blend-mode: darken;
+                max-height: 297px;
+                height: 100%;
                 img{
-                    width: 100%;
+                    // width: 100%;
+                    height: 100%;
+                    width: auto;
                     // border-style: solid;
                     // border-width: 16px;
                 }
